feat: precommit-removal

--- a/package.json
+++ b/package.json
@@ -36,15 +36,13 @@
     "publish:all:next": "pnpm publish -r --tag next",
     "build:api": "pnpm -F @webav/* run build:api",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "upver": "pnpm changeset version",
-    "postinstall": "simple-git-hooks"
+    "upver": "pnpm changeset version"
   },
   "workspaces": [
     "packages/*"
   ],
   "simple-git-hooks": {
-    "commit-msg": "node scripts/verify-commit.js",
-    "pre-commit": "pnpm lint-staged"
+    "commit-msg": "node scripts/verify-commit.js"
   },
   "lint-staged": {
     "*.{json,ts,tsx,js,md}": [
